Fix a top padding wrap bug on server rendered code

--- a/packages/precision-diffs/src/style.css
+++ b/packages/precision-diffs/src/style.css
@@ -283,15 +283,12 @@ code {
   padding-block: var(--pjs-gap);
 }
 
-[data-pjs-header] ~ [data-pjs] [data-code] {
-  padding-top: 0;
-}
-
 [data-pjs][data-overflow='wrap'] {
   padding-block: var(--pjs-gap);
 }
 
-[data-pjs-header] + [data-icon-sprite] + [data-pjs][data-overflow='wrap'] {
+[data-pjs-header] ~ [data-pjs] [data-code],
+[data-pjs-header] ~ [data-pjs][data-overflow='wrap'] {
   padding-top: 0;
 }
 
